// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleList renders aria-labelled content 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-simple-list"
  >
    <ul
      aria-label="This is a simple list"
      class="pf-v6-c-simple-list__list"
      role="list"
    >
      <li
        class="pf-v6-c-simple-list__item"
      >
        <button
          class="pf-v6-c-simple-list__item-link"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class="pf-v6-c-simple-list__item"
      >
        <button
          class="pf-v6-c-simple-list__item-link"
          type="button"
        >
          Item 2
        </button>
      </li>
      <li
        class="pf-v6-c-simple-list__item"
      >
        <button
          class="pf-v6-c-simple-list__item-link"
          type="button"
        >
          Item 3
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SimpleList renders content 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-simple-list"
  >
    <ul
      class="pf-v6-c-simple-list__list"
      role="list"
    >
      <li
        class="pf-v6-c-simple-list__item"
      >
        <button
          class="pf-v6-c-simple-list__item-link"
          type="button"
        >
          Item 1
        </button>
      </li>
      <li
        class="pf-v6-c-simple-list__item"
      >
        <button
          class="pf-v6-c-simple-list__item-link"
          type="button"
        >
          Item 2
        </button>
      </li>
      <li
        class="pf-v6-c-simple-list__item"
      >
        <button
          class="pf-v6-c-simple-list__item-link"
          type="button"
        >
          Item 3
        </button>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`SimpleList renders grouped content 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-simple-list"
  >
    <section
      class="pf-v6-c-simple-list__section"
    >
      <h2
        aria-hidden="true"
        class="pf-v6-c-simple-list__title"
        id=""
      >
        Group 1
      </h2>
      <ul
        aria-labelledby=""
        class="pf-v6-c-simple-list__list"
        role="list"
      >
        <li
          class="pf-v6-c-simple-list__item"
        >
          <button
            class="pf-v6-c-simple-list__item-link"
            type="button"
          >
            Item 1
          </button>
        </li>
        <li
          class="pf-v6-c-simple-list__item"
        >
          <button
            class="pf-v6-c-simple-list__item-link"
            type="button"
          >
            Item 2
          </button>
        </li>
        <li
          class="pf-v6-c-simple-list__item"
        >
          <button
            class="pf-v6-c-simple-list__item-link"
            type="button"
          >
            Item 3
          </button>
        </li>
      </ul>
    </section>
  </div>
</DocumentFragment>
`;
